fix fonts using Montserrat and uppercase on mobile only

--- a/src/layout/header/Header.module.sass
+++ b/src/layout/header/Header.module.sass
@@ -25,6 +25,7 @@
   text-decoration: none
 
   @media screen and (max-width: 768px) 
+    text-transform: uppercase
     font-size: 12px
 
 .active
